Added make payment button

--- a/app/views/member_portal/account.html.haml
+++ b/app/views/member_portal/account.html.haml
@@ -61,7 +61,7 @@
 
                 %td= truncate(item.description, length: 40)
                 %td= item.balance_formatted
-                %td.text-right
+                %td.text-right= paid(item)
 
       =# render partial: 'shared/transaction_history', locals: {history_title: "Recent Account History"}
     
