Transaction history for the member portal

--- a/app/views/member_portal/account.html.haml
+++ b/app/views/member_portal/account.html.haml
@@ -63,5 +63,5 @@
                 %td= item.balance_formatted
                 %td.text-right= paid(item)
 
-      =# render partial: 'shared/transaction_history', locals: {history_title: "Recent Account History"}
+      = render partial: 'transaction_history', locals: {history_title: "Recent Account History"}
     
