--- a/app/views/member_portal/details.html.haml
+++ b/app/views/member_portal/details.html.haml
@@ -109,4 +109,4 @@
       %div{:style => "margin-top: 50px;"}
         .row
           .col-md-12
-            =# render partial: 'shared/transaction_history', locals: {history_title: "Invoice History"}
+            = render partial: 'transaction_history', locals: {history_title: "Invoice History"}
