--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
     = csrf_meta_tags
+    %link{href: "/open-iconic/font/css/open-iconic-bootstrap.css", rel: "stylesheet"}
 
   %body{class: controller_name + " " + action_name}
 
