--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -1,5 +1,5 @@
 .col-md-6.col-md-offset-3
-  .box.box-body
+  .box.box-body-md
     = form_for([@space, @member]) do |f| 
       .form-group{:class => has_error(@member, :name)}
         = f.label :name 
