Back to membrs.co

--- a/app/views/spaces/new.html.haml
+++ b/app/views/spaces/new.html.haml
@@ -20,7 +20,7 @@
                   .input-group
                     %span{class: "input-group-addon"} https://
                     = s.text_field :subdomain, class: "form-control" 
-                    %span{class: "input-group-addon"} .dovetail.io
+                    %span{class: "input-group-addon"} .membrs.co
                     = field_errors(@newspace, :subdomain)
 
               - unless current_user.trialing?
