--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,4 +39,20 @@
 }
 
 
+table.invoice input, table.invoice input:hover, table.invoice input:focus, table.invoice input:active {
+  background: transparent;
+  border: 0;
+  border-style: none;
+  border-color: transparent;
+  outline: none;
+  outline-offset: 0;
+  box-shadow: none;
+  padding:0;
+  margin:0;
+}
 
+.table.invoice > tbody > tr > td {
+  padding:0;
+  padding-left:5px;
+  padding-right:5px;
+}
