--- a/app/views/invoices/show.html.haml
+++ b/app/views/invoices/show.html.haml
@@ -18,27 +18,27 @@
         .row
           .col-md-6
             - if @invoice.status == "open" 
-              = link_to "Send Invoice", deliver_space_member_invoice_path(@space, @member, @invoice), method: "post", class: "btn btn-invoice-action btn-xs vertical-center "
-              = link_to "Edit Invoice", edit_space_member_invoice_path(@space, @member, @invoice), class: "btn btn-invoice-action btn-xs vertical-center"  
+              = link_to "Send Invoice", deliver_space_member_member_invoice_path(@space, @member, @invoice), method: "post", class: "btn btn-invoice-action btn-xs vertical-center "
+              = link_to "Edit Invoice", edit_space_member_member_invoice_path(@space, @member, @invoice), class: "btn btn-invoice-action btn-xs vertical-center"  
               .btn-group
                 %a.btn.btn-invoice-action.btn-xs.vertical-center.dropdown-toggle{"aria-expanded" => "false", "data-toggle" => "dropdown", :type => "button"}
                   More Actions
                   %span.caret
                 %ul.dropdown-menu{:role => "menu"}
                   %li
-                    = link_to "Add Credit Note", new_space_member_credit_note_path(@space, @member, invoice_id: @invoice.id), class: ""  
+                    = link_to "Add Credit Note", new_space_member_member_credit_note_path(@space, @member, invoice_id: @invoice.id), class: ""  
                   %li
-                    = link_to "Delete Invoice", space_member_invoice_path(@space, @member, @invoice), class: "", method: "delete", data: { confirm: 'Are you sure?' }              
+                    = link_to "Delete Invoice", space_member_member_invoice_path(@space, @member, @invoice), class: "", method: "delete", data: { confirm: 'Are you sure?' }              
             - else 
               - if !@invoice.paid? 
-                = link_to "Add Credit Note", new_space_member_credit_note_path(@space, @member, invoice_id: @invoice.id), class: "btn btn-invoice-action btn-xs vertical-center"  
+                = link_to "Add Credit Note", new_space_member_member_credit_note_path(@space, @member, invoice_id: @invoice.id), class: "btn btn-invoice-action btn-xs vertical-center"  
           .col-md-6.text-right
             %p.balance.verticle-middle
               Balance:
               %span{:style => "margin-left:4px; font-weight:600;"} 
                 #{@invoice.balance_formatted} #{@member.location.currency}  
             - if !@invoice.paid? 
-              = link_to "Record Payment", new_space_member_payment_path(@space, @member, invoice_id: @invoice.id), class: "btn btn-success btn-xs vertical-center" 
+              = link_to "Record Payment", new_space_member_member_payment_path(@space, @member, invoice_id: @invoice.id), class: "btn btn-success btn-xs vertical-center" 
       .box.box-body-md
         .row
           .col-md-6
@@ -85,7 +85,7 @@
                   %th{:style => "text-align: right; width: 8%"}
                     Qty
                   %th{:style => "text-align: right; width: 14%"}
-                    Price
+                    Unit Price
                   %th{:style => "text-align: right; width: 8%"}
                     Tax
                   %th{:style => "text-align: right; width: 14%"}
@@ -96,7 +96,7 @@
                   %tr
                     %td #{line.description}
                     %td.text-right #{line.quantity}
-                    %td.text-right #{line.net_amount_formatted}
+                    %td.text-right #{line.unit_price_formatted}
                     %td.text-right #{line.tax_amount_formatted}
                     %td.text-right #{line.gross_amount_formatted}
         .row
