--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,3 +56,7 @@ table.invoice input, table.invoice input:hover, table.invoice input:focus, table
   padding-left:5px;
   padding-right:5px;
 }
+
+.account-content a:hover {
+    text-decoration: none;
+}
