WIP on generating scheduled invoices - untested, but should have little to no impact.  UI changes from Matts list

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -59,7 +59,7 @@
           <%= f.email_field :email, class: "form-control", placeholder: "Enter email", style: "width:225px;" %>
         </div>
       </div>
-      <%= f.submit 'Send Invite', class: "btn btn-primary" %>
+      <%= f.submit 'Send Invite', class: "btn btn-success" %>
     <% end %>
   </div>
 
