--- a/app/views/invoices/_form.html.haml
+++ b/app/views/invoices/_form.html.haml
@@ -47,6 +47,6 @@
 
     %br{style: "clear:both;"}
     %div
-      = f.submit class: "btn btn-primary"
+      = f.submit class: "btn btn-success"
       or
       = link_to("Cancel", :back)
