--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -19,4 +19,4 @@
   </tbody>
 </table>
 
-<%= link_to 'New Location', new_space_location_path(@space) %>
+<%= link_to 'Add New Location', new_space_location_path(@space), class: "btn btn-success" %>
