--- a/app/views/payments/_form.html.haml
+++ b/app/views/payments/_form.html.haml
@@ -1,4 +1,4 @@
-.col-md-6.col-md-offset-3
+.col-md-6.col-md-offset-3.box.box-body-md
   %h5
     New Payment from 
     = @member.name
@@ -9,11 +9,11 @@
       = f.label :description 
       = f.text_field :description, class: "form-control"
       = field_errors(@payment, :description)
-    .form-group{:class => "#{has_error(@payment, :due_date)} col-md-3", style: "padding-right:0;"}
+    .form-group{:class => "#{has_error(@payment, :total_amount)} col-md-3", style: "padding-right:0;"}
       = f.label :total_amount, "Amount"
       = f.text_field :total_amount, class: "form-control"
       = field_errors(@payment, :total_amount)
-    = f.submit class: "btn btn-primary"
+    = f.submit class: "btn btn-success"
     or
     = link_to("Cancel", :back)
 
