--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -22,4 +22,4 @@
           = link_to 'Edit', edit_space_plan_path(@space, plan)
           = link_to 'Destroy', [@space, plan], :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-= link_to 'New Plan', new_space_plan_path(@space)
+= link_to 'Create New Plan', new_space_plan_path(@space), class: "btn btn-success"
